// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Checkbox renders a custom indicator 1`] = `
<div>
  <span
    class="fui-Checkbox"
  >
    <input
      class="fui-Checkbox__input"
      id="checkbox-_r_c_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="fui-Checkbox__indicator"
    >
      <span
        id="indicator"
      />
    </div>
    <label
      class="fui-Label fui-Checkbox__label"
      for="checkbox-_r_c_"
    >
      Custom indicator
    </label>
  </span>
</div>
`;

exports[`Checkbox renders a default state 1`] = `
<div>
  <span
    class="fui-Checkbox"
  >
    <input
      class="fui-Checkbox__input"
      id="checkbox-_r_8_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="fui-Checkbox__indicator"
    />
  </span>
</div>
`;

exports[`Checkbox renders checked 1`] = `
<div>
  <span
    class="fui-Checkbox"
  >
    <input
      checked=""
      class="fui-Checkbox__input"
      id="checkbox-_r_a_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="fui-Checkbox__indicator"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <label
      class="fui-Label fui-Checkbox__label"
      for="checkbox-_r_a_"
    >
      Checked Checkbox
    </label>
  </span>
</div>
`;

exports[`Checkbox renders mixed 1`] = `
<div>
  <span
    class="fui-Checkbox"
  >
    <input
      class="fui-Checkbox__input"
      id="checkbox-_r_b_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="fui-Checkbox__indicator"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6a3 3 0 0 1 3-3h8a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <label
      class="fui-Label fui-Checkbox__label"
      for="checkbox-_r_b_"
    >
      Mixed Checkbox
    </label>
  </span>
</div>
`;

exports[`Checkbox renders with a label 1`] = `
<div>
  <span
    class="fui-Checkbox"
  >
    <input
      class="fui-Checkbox__input"
      id="checkbox-_r_9_"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="fui-Checkbox__indicator"
    />
    <label
      class="fui-Label fui-Checkbox__label"
      for="checkbox-_r_9_"
    >
      Unchecked Checkbox
    </label>
  </span>
</div>
`;
